Components/BlockArchiveEpisodeSelect/_style.scss
[is='flynt-block-archive-episode-select'] {
  margin: 0;

  .container-outer {
    border-bottom: 1px solid $green;
    display: grid;
    grid-template-columns: 25% 75%;
    row-gap: $container-padding;

    @media (max-width: $breakpoint-tablet-horizontal) {
      display: flex;
      flex-flow: column wrap;
      padding: 0;
    }

    .preContent {
      display: flex;
      justify-content: flex-start;
      padding: $container-padding 0;
      width: 100%;

      @media (max-width: $breakpoint-tablet-horizontal) {
        border-bottom: 1px solid $green;
        margin-bottom: $container-padding;
      }
    }

    .grid {
      @include reset-list;
      // column-gap: $container-padding;
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      height: 100%;
      padding: $container-padding 0;
      // row-gap: $container-padding;

      @media (max-width: $breakpoint-tablet-horizontal) {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        padding: 0;
      }

      @media (max-width: $breakpoint-mobile-horizontal) {
        display: flex;
        flex-flow: column wrap;
        padding: 0;
      }
    }
  }

  .grid-item {
    border-bottom: 1px solid $green;
    margin-bottom: $container-padding;
    padding-bottom: $container-padding;
    padding-right: $container-padding;
    width: 100%;

    @media (max-width: $breakpoint-tablet-horizontal) {
      padding-top: 0;

      &:nth-child(even) {
        padding-right: 0;
      }

      &:nth-last-child(1) {
        border-bottom: 0;
      }
    }

    @media (max-width: $breakpoint-mobile-horizontal) {
      padding-right: 0;
      padding-top: 0;

      &:nth-last-child(1) {
        border-bottom: 0;
      }
    }

    .content {
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      width: 100%;

      .episode-header {
        display: flex;
        flex-flow: column wrap;

        @media (max-width: $breakpoint-mobile-horizontal) {
          display: flex;
          flex-flow: column wrap;
        }
      }

      .tags {
        // @include reset-list;
        display: flex;
        flex-flow: row wrap;
        gap: $container-padding;
        justify-content: flex-start;
        padding-left: 0;

        &-item {
          display: inline-block;

          &Link {
            color: $green;
            text-decoration: none;
          }
        }
      }
    }
  }

  .figure-image {
    height: 41vh;
    object-fit: cover;
    width: 100%;

    @media (max-width: $breakpoint-tablet-horizontal) {
      height: 35.5vh;
      object-fit: cover;
      width: 100%;
    }

    @media (max-width: $breakpoint-mobile-horizontal) {
      height: 42.5vh;
      object-fit: cover;
      width: 100%;
    }
  }
}

